--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.60.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "5.7",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "permissionless": "^0.2.17",
